--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.1",
     "mypy>=1.15.0",
+    "pre-commit>=4.1.0",
     "pydantic>=2.10.6",
     "pytest>=8.3.5",
     "requests>=2.32.3",
