--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,6 @@
         "UV_LINK_MODE": "copy",
         "UV_PROJECT_ENVIRONMENT": "/home/vscode/.venv"
     },
-    "postCreateCommand": "uv sync --frozen && uv venv && uv add --dev ruff",
+    "postCreateCommand": "uv sync --frozen && uv venv && uv add --dev ruff && pre-commit install",
     "remoteUser": "vscode"
 }
