--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,24 @@
 [mypy]
 strict = True
+
+
+[mypy-helpers]
+ignore_missing_imports = True
+
+
+[mypy-api.*]
+ignore_missing_imports = True
+
+
+[mypy-algo.*]
+ignore_missing_imports = True
+
+
+[mypy-src.api.response_models.models]
+# pydantic complaining about overriding __iter__
+disable_error_code = override
+
+
+[mypy-requests]
+ignore_missing_imports = True
+
