--- a/mypy.ini
+++ b/mypy.ini
@@ -15,9 +15,12 @@ ignore_missing_imports = True
 
 
 [mypy-src.api.response_models.models]
-# pydantic complaining about overriding __iter__
+# complaining about overriding __iter__ from pydantic.BaseModel
 disable_error_code = override
 
+[mypy-src.algo.data_structures.*]
+# complaining about overriding model_dump_json from pydantic.BaseModel
+disable_error_code = override
 
 [mypy-requests]
 ignore_missing_imports = True
