--- a/mypy.ini
+++ b/mypy.ini
@@ -1,26 +1,29 @@
 [mypy]
 strict = True
 
-
 [mypy-helpers]
 ignore_missing_imports = True
 
+[mypy-models]
+ignore_missing_imports = True
 
 [mypy-api.*]
 ignore_missing_imports = True
 
-
 [mypy-algo.*]
 ignore_missing_imports = True
 
+[mypy-render.*]
+ignore_missing_imports = True
 
-[mypy-src.api.response_models.models]
-# complaining about overriding __iter__ from pydantic.BaseModel
+
+[mypy-src.api.data_structures.*]
 disable_error_code = override
 
-[mypy-src.algo.data_structures.*]
-# complaining about overriding model_dump_json from pydantic.BaseModel
+
+[mypy-src.models.season_models]
 disable_error_code = override
+
 
 [mypy-requests]
 ignore_missing_imports = True
