feat: run_local and run_docker scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   afl-parity:
-    image: afl-parity
     build:
       context: .
       dockerfile: Dockerfile
+    image: afl-parity:latest
     volumes:
       - ./output:/afl-parity/output
       - ./.logs:/afl-parity/.logs
