--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
     volumes:
       - ./output:/afl-parity/output
       - ./.logs:/afl-parity/.logs
+      # timezone linking
+      - /etc/localtime:/etc/localtime:ro 
+      - /etc/timezone:/etc/timezone:ro
