fix: devcontainer /output/ perms

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,3 +6,7 @@ FROM ghcr.io/astral-sh/uv:$UV_VERSION AS uv
 FROM mcr.microsoft.com/vscode/devcontainers/base:$DEBIAN_VERSION
 
 COPY --from=uv --chown=vscode: /uv /uvx /bin/
+
+RUN mkdir -p /afl-parity/output && \
+    chmod -R 777 /afl-parity/output && \
+    chown -R vscode: /afl-parity/output
