--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,10 @@
         "UV_LINK_MODE": "copy",
         "UV_PROJECT_ENVIRONMENT": "/home/vscode/.venv"
     },
+    "mounts": [
+        "source=/etc/localtime,target=/etc/localtime,type=bind,readonly",
+        "source=/etc/timezone,target=/etc/timezone,type=bind,readonly"
+    ],
     "remoteUser": "vscode",
     "postCreateCommand": "uv sync --frozen && uv add --dev ruff"
 }
