--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp>=3.11.16",
     "matplotlib>=3.10.1",
     "pydantic>=2.10.6",
-    "requests>=2.32.3",
-    "uv>=0.6.5"
+    "uv>=0.6.5",
 ]
 
 [dependency-groups]
